--- a/nav.html
+++ b/nav.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git</title>
+    <title>nav</title>
 </head>
 <body>
-    <h3>git pro</h3>
-    <h4>git new</h4>
-    
+    <h1>navbar</h1>
 </body>
 </html>
